<resources>
    <string name="app_name">Submission Jetpack</string>
    <string name="tab_text_1">Movie</string>
    <string name="tab_text_2">Tv Show</string>
    <string name="cth_dec_img">example</string>
    <string name="language">Language</string>
    <string name="other">Adult</string>
    <string name="runtime">Runtime</string>
    <string name="genre">Genre</string>
    <string name="overview">Overview</string>
    <string name="production">Production</string>
    <string name="menu_favorite">Favorite</string>
</resources>